# fdf

./: CMakeLists.txt  Makefile  fdf  main.c
inc/: array2_point.h  array_point.h  color.h  data.h  draw.h  draw_context.h  keyboard.h  matrix4.h  options.h  parse.h  point.h  utils.h
libft/: Makefile  cast_b.c  cast_csp.c  cast_d.c  cast_default.c  cast_douxb.c  cast_f.c  cast_o.c  cast_u.c  cast_x.c  cast_x_additional.c  ft_abs.c  ft_atoi.c  ft_atox.c  ft_bzero.c  ft_decimal.c  ft_double_is_negative.c  ft_dtostr.c  ft_dtostr_additional.c  ft_is_atoi_number.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isinf.c  ft_islower.c  ft_isnan.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_labs.c  ft_ldecimal.c  ft_ldtostr.c  ft_llabs.c  ft_llmax.c  ft_llmin.c  ft_lmax.c  ft_lmin.c  ft_lstadd.c  (+73 more)
src/: array2_point.c  array2_point_at.c  array_point.c  array_point_at.c  data.c  draw.c  draw_context.c  keyboard.c  matrix4.c  options.c  parse.c  point.c  utils.c
